--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             android:foregroundServiceType="dataSync" >
         </service>
 
+        <service
+                android:name=".SecondNotificationService"
+                android:enabled="true"
+                android:exported="false"
+                android:foregroundServiceType="dataSync" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true" >
